<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.TimeTableFragment">
    <LinearLayout
        android:id="@+id/time_table_header"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:background="#f7f7f7"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:id="@+id/mon_col_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/week_header_right"
            android:gravity="center"
            android:text="@string/mon_string"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tue_col_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/week_header_right"
            android:gravity="center"
            android:text="@string/tue_string"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/wed_col_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/week_header_right"
            android:gravity="center"
            android:text="@string/wed_string"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/thur_col_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/week_header_right"
            android:gravity="center"
            android:text="@string/thur_string"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/fri_col_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fri_string"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/time_table_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:fadeScrollbars="false"
            android:orientation="horizontal"
            android:weightSum="5">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/mon_col"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/tue_col"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/wed_col"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/thur_col"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/fri_col"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>