<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary9">

    <LinearLayout
        android:id="@+id/root_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"

        android:paddingTop="30sp"
       >


        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="ECCコンピュータ\n専門学校"
            android:textAlignment="center"
            android:textColor="@color/white"

            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10sp"
            android:paddingRight="5sp"
            android:paddingLeft="5sp"
            android:paddingBottom="10sp"
            android:paddingTop="10sp"
            android:background="@drawable/login_text_bg">

                <!--学籍番号-->
                <android.support.design.widget.TextInputLayout
                    app:counterMaxLength="10"
                    android:id="@+id/usernameWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="@+id/login_title"
                    android:layout_marginLeft="25sp"
                    android:layout_marginRight="25sp">
                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/username"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/usernameWrapper"
                        android:layout_alignStart="@+id/usernameWrapper"
                        android:hint="学籍番号"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:nextFocusDown="@+id/password"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <!--パスワード-->
                <android.support.design.widget.TextInputLayout
                    app:counterMaxLength="15"
                    android:id="@+id/passwordWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25sp"
                    android:layout_marginRight="25sp"
                    android:layout_marginTop="4dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Passwored"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:nextFocusDown="@+id/login_btn"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            >

            <com.dd.CircularProgressButton
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:id="@+id/login_btn"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textColor="#FFF"
                android:textSize="16sp"
                app:cpb_colorIndicator="@color/cpb_blue"
                app:cpb_colorIndicatorBackground="@color/cpb_grey"
                app:cpb_colorProgress="@color/cpb_white"
                app:cpb_cornerRadius="48dp"
                app:cpb_iconComplete="@drawable/ic_action_accept"
                app:cpb_iconError="@drawable/ic_action_cancel"
                app:cpb_textComplete="@string/Complete"
                app:cpb_textError="@string/Error"
                app:cpb_textIdle="@string/Login" />
        </RelativeLayout>



    </LinearLayout>

</ScrollView>