<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary9">

    <LinearLayout
        android:id="@+id/root_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:paddingTop="30sp">

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>

        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="ECCコンピュータ\n専門学校"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:background="@drawable/bg_login_text"
            android:orientation="vertical"
            android:paddingBottom="15sp"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:paddingTop="15sp">

            <!--学籍番号-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/usernameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="@+id/login_title"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="25sp"
                android:layout_marginRight="25sp"
                app:counterMaxLength="10">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/text_view_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/usernameWrapper"
                    android:layout_alignStart="@+id/usernameWrapper"
                    android:background="@drawable/bg_login_edit_text"
                    android:hint="学籍番号"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:nextFocusDown="@+id/password"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <!--パスワード-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:layout_marginRight="25sp"
                android:layout_marginTop="4dp"
                app:counterMaxLength="15">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/text_view_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_login_edit_text"
                    android:hint="@string/Passwored"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:nextFocusDown="@+id/btn_login"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp">

            <com.dd.CircularProgressButton
                android:id="@+id/btn_login"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textColor="#FFF"
                android:textSize="16sp"
                app:cpb_colorIndicator="@color/cpb_blue"
                app:cpb_colorIndicatorBackground="@color/cpb_grey"
                app:cpb_colorProgress="@color/cpb_white"
                app:cpb_cornerRadius="48dp"
                app:cpb_iconComplete="@drawable/ic_done"
                app:cpb_iconError="@drawable/ic_clear"
                app:cpb_textComplete="@string/Complete"
                app:cpb_textError="@string/Error"
                app:cpb_textIdle="@string/Login" />
        </RelativeLayout>



    </LinearLayout>
</ScrollView>